Added CSS JS file and can display time

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title>AlarmClock-Menlo</title>
+	<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
+	<script src="scripts.js"></script>
 </head>
 <body>
+	<div id="content">
+		<div id="clock">
+			00:00
+		</div>
+	</div>
 	
 </body>
 </html>
